fix: styling when there is no visibility setting showned

--- a/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
+++ b/src/app/cdk/side-bar/modals/modal-email/modal-email.component.scss
@@ -106,3 +106,10 @@ mat-form-field {
 .only-verified {
   padding: 0 4px;
 }
+
+.visibility-hidden {
+  justify-content: end !important;
+  button {
+    margin-inline-end: 8px;
+  }
+}
